--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Conexión a PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/ats_db
-spring.datasource.username=dperd01   # o tu usuario de sistema, según corresponda
+spring.datasource.username=dpered01   # o tu usuario de sistema, según corresponda
 spring.datasource.password=
 
 # Configuración de JPA
